// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-order-confirmation-totals renders 1`] = `
<ce-order-confirmation-totals>
  <mock:shadow-root>
    <div class="line-item-totals">
      <ce-line-item-total total="subtotal">
        <span slot="description">
          Subtotal
        </span>
      </ce-line-item-total>
      <ce-divider style="--spacing: var(--sc-spacing-small);"></ce-divider>
      <ce-line-item-total show-currency="" size="large">
        <span slot="description">
          Total
        </span>
      </ce-line-item-total>
    </div>
  </mock:shadow-root>
</ce-order-confirmation-totals>
`;

exports[`sc-order-confirmation-totals renders 1`] = `
<sc-order-confirmation-totals>
  <mock:shadow-root>
    <div class="line-item-totals">
      <sc-line-item-total total="subtotal">
        <span slot="description">
          Subtotal
        </span>
      </sc-line-item-total>
      <sc-divider style="--spacing: var(--sc-spacing-small);"></sc-divider>
      <sc-line-item-total show-currency="" size="large">
        <span slot="description">
          Total
        </span>
      </sc-line-item-total>
    </div>
  </mock:shadow-root>
</sc-order-confirmation-totals>
`;
